# server/routes/auth.route.ts
@@ -5,10 +5,11 @@ import {
   registerUser,
 } from "../controller/auth.controller";
 import { isAuthenticated } from "../middleware/auth";
+import limiter from "../utils/rateLimiter";
 const authRouter = express.Router();
 
-authRouter.post("/register", registerUser);
-authRouter.post("/login", loginUser);
+authRouter.post("/register", limiter, registerUser);
+authRouter.post("/login", limiter, loginUser);
 authRouter.get("/logout", isAuthenticated, logoutUser);
 
 export default authRouter;
